// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot when has a category 1`] = `
.emotion-0 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f8a00f;
  color: #fff !important;
}

.emotion-0:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-0:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.emotion-0:hover {
  background: #a16d22;
}

.emotion-0:active {
  box-shadow: 0 1px 6px #172b4e inset;
}

.emotion-0:disabled {
  background: rgba(248,160,15,0.4);
}

<button
  className="undefined emotion-0"
>
  Some content
</button>
`;

exports[`Button matches snapshot when has a leading component 1`] = `
.emotion-2 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-2:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.emotion-1 {
  margin-right: 8px;
  height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: inherit;
}

<button
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <i
      className="emotion-0 Drycon Drycon-check"
    />
  </div>
  Some content
</button>
`;

exports[`Button matches snapshot when has a tier 1`] = `
.emotion-0 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: transparent;
  color: #172b4e;
  box-shadow: 0 0 0 1px #d3dce6 inset;
}

.emotion-0:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-0:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.emotion-0:hover {
  background: #eaeff4;
}

.emotion-0:active {
  box-shadow: 0 0 0 1px #d3dce6 inset,0 1px 6px #d3dce6 inset;
}

.emotion-0:disabled {
  box-shadow: 0 0 0 1px #eaeff4 inset;
  background: none;
}

<button
  className="emotion-0"
>
  Some content
</button>
`;

exports[`Button matches snapshot when has a trailing component 1`] = `
.emotion-2 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-2:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.emotion-1 {
  margin-left: 8px;
  height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: inherit;
}

<button
  className="emotion-2"
>
  Some content
  <div
    className="emotion-1"
  >
    <i
      className="emotion-0 Drycon Drycon-check"
    />
  </div>
</button>
`;

exports[`Button matches snapshot when is basic 1`] = `
.emotion-0 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-0:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

<button
  className="emotion-0"
>
  Some content
</button>
`;

exports[`Button matches snapshot when is small 1`] = `
.emotion-0 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: calc(8px - 1px) 8px;
}

.emotion-0:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-0:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

<button
  className="emotion-0"
>
  Some content
</button>
`;
